--- a/application/static/styles/style.css
+++ b/application/static/styles/style.css
@@ -119,21 +119,41 @@ HOME
 #about .box .content {
   display: flex;
   flex-flow: row;
+  overflow-y: auto;
 }
 #about .box .content .block1 {
-  flex: 1 0;
-  display: flex;
-  flex-flow: column;
   background-color: red;
+  flex: 1 1;
+  display: flex;
+  justify-content: end;
 }
-#about .box .content .block1 .carousel {
-  flex: 0 1 100%;
+#about .box .content .block1 .test {
+  display: flex;
 }
-#about .box .content .block1 .carousel .carousel-inner {
+#about .box .content .block1 .test img {
+  height: auto;
+  width: auto;
+  max-width: 100%;
+  max-height: 100%;
+  align-self: center;
   border-radius: 10px;
 }
+#about .box .content .block1 .carousel {
+  display: flex;
+}
+#about .box .content .block1 .carousel .carousel-inner {
+  display: flex;
+  border-radius: 10px;
+}
+#about .box .content .block1 .carousel .carousel-inner .carousel-item {
+  display: flex;
+}
+#about .box .content .block1 .carousel .carousel-inner .carousel-item img {
+  max-width: 100%;
+  max-height: 100%;
+}
 #about .box .content .block2 {
-  flex: 1 0;
+  flex: 1 1;
   background-color: blue;
 }
 
